--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 	"name": "Asterix",
 	"description": "Asterix Is A Multifunctional Telegram Userbot with Custom Settings.",
-	"logo": "",
+	"logo": "https://telegra.ph/file/467a20658b7e7ab6a72b5.jpg",
 	"keywords": [
 		"userbot",
 		"plugins",
