--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pyrogram==1.4
+git+https://github.com/Ryoishin/pyrogram
 pytube
 telegraph
 heroku3
@@ -11,7 +11,7 @@ covid
 pySmartDL
 pyDownload
 sqlalchemy==1.3.23
-tgcrypto
+TgCrypto==1.2.2
 httpx
 pytz
 psycopg2
